--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 authors = [
     "Nekhil Nagia"
 ]
+edition = "2018"
 
 [[bin]]
 name = "simulation"
@@ -14,3 +15,4 @@ piston = "0.53.0"
 piston2d-graphics = "0.40.0"
 pistoncore-glutin_window = "0.69.0"
 piston2d-opengl_graphics = "0.78.0"
+rand = "0.8.3"
